second attempt to fix map positioning on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -62,7 +62,7 @@ body, html {
     #map {
         height: 348px;
         width: 285.6px;
-        margin-top: 40%;
+        margin-bottom: 50%;
         top: 0%;
     }
 }
